[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "scansearch"
version = "0.1.0"
description = "Official Python SDK and CLI for ScanSearch — live internet scanning & exposure research, an alternative to Shodan and Censys."
readme = "README.md"
license = "MIT"
authors = [{ name = "ScanSearch", email = "contact@scansearch.net" }]
requires-python = ">=3.8"
keywords = [
    "scansearch", "shodan", "censys", "fofa",
    "port-scanner", "network-scanner", "osint",
    "asm", "attack-surface", "internet-exposure",
    "pentesting", "bug-bounty", "security",
    "cve", "asn", "ipv4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://scansearch.net"
Documentation = "https://scansearch.net/resources/api-docs/"
Repository = "https://github.com/scansearch/scansearch-python"
Issues = "https://github.com/scansearch/scansearch-python/issues"
Changelog = "https://github.com/scansearch/scansearch-python/blob/main/CHANGELOG.md"

[project.scripts]
scansearch = "scansearch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scansearch"]
